Mon Nov  7 16:27:12 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* bin/MakeProjectCreator/config/csd_framework.mpb
	* bin/MakeProjectCreator/config/notifytest.mpb
	* bin/MakeProjectCreator/config/rteventlogadmin.mpb

	Fixes for linking errors on OS X. 
	
Mon Nov  7 15:24:30 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* include/makeinclude/platform_macosx_tiger_gcc3.3.GNU

	Added a macros file for Tiger with GCC 3.3.

Mon Nov  7 14:45:05 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Stats.h:
        
          Made private section of class ACE_Stats protected, for
          convenient subclassing.

Mon Nov  7 09:21:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/compiler.bor:
          Added -L$(BCB)\lib\psdk always to the linker flags

Sun Nov  6 21:19:44 2005  Bala Natarajan  <bala_natarajan at symantec dot com>

	* ace/ace_sockets_for_tao.mpc:

	  Fixed another bug with th eMPC file.

	* protocols/ace/HTBP/HTBP.mpc:

	  Reverted the avoids declaration.

Sun Nov  6 21:02:17 2005  Bala Natarajan  <bala_natarajan at symantec dot com>

	* ace/ace_for_tao.mpc:
	* ace/ace_threads_for_tao.mpc:
	* protocols/ace/HTBP/HTBP.mpc:
	* protocols/ace/RMCast/RMCast.mpc:
	* protocols/ace/TMCast/TMCast.mpc:
	* protocols/examples/RMCast/Send_Msg/Send_Msg.mpc:
	* protocols/tests/RMCast/RMCast.mpc:

	  Fixed subtle errors with ace_for_tao builds.

Sat Nov  5 13:28:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/APG/Shared_Memory/Hash_Map.cpp:
          Replaced MAP with HASH_MAP to fix compile problems with VxWorks 6.1

Sat Nov  5 13:01:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Cache_Map_Manager_T.{h,cpp,inl}:
          Replaced MAP_TYPE with CMAP_TYPE, MAP_TYPE is also used on some
          platforms already

        * include/makeinclude/compiler.bor:
          Fixed typo

Fri Nov  4 09:18:17 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
