@@ -1,3 +1,9 @@
+Tue Nov  8 15:27:25 2005  William Otte  <wotte@dre.vanderbilt.edu>
+
+	* ace/config-macosx-tiger.h
+
+	Fixed size of long double for Mac OS X Tiger with GCC 3.3.
+	
 Mon Nov  7 16:27:12 2005  William Otte  <wotte@dre.vanderbilt.edu>
 
 	* bin/MakeProjectCreator/config/csd_framework.mpb
